test/errors/statement.py
|x = 7
] = 44
