test/errors/statement.py.expected
test/errors/statement.py:1 error: expected statement, got `|`
test/errors/statement.py:2 error: expected statement, got `]`
